--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Background Slider</title>
+    <script
+      src="https://kit.fontawesome.com/fe17887fbc.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
+    <title>Background Slider</title>
   </head>
   <body>
     <div class="slider-container">
@@ -43,11 +47,11 @@
       ></div>
 
       <button class="arrow left-arrow" id="left">
-        <i class="fas fa-arrow-left"></i>
+        <i class="fa-solid fa-arrow-left"></i>
       </button>
 
       <button class="arrow right-arrow" id="right">
-        <i class="fas fa-arrow-right"></i>
+        <i class="fa-solid fa-arrow-right"></i>
       </button>
     </div>
     <script src="script.js"></script>
